Aplicacion correcta de los response y request en Camion controller/service