@@ -1,18 +1,16 @@
 package ar.edu.utn.frba.ddsi.logistica.services;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
-import ar.edu.utn.frba.ddsi.logistica.models.entities.Chofer;
-import ar.edu.utn.frba.ddsi.logistica.dto.camion.ActualizarCamionRequest;
-import ar.edu.utn.frba.ddsi.logistica.dto.camion.ActualizarCamionResponse;
+import ar.edu.utn.frba.ddsi.logistica.dto.camion.CamionRequest;
+import ar.edu.utn.frba.ddsi.logistica.dto.camion.CamionResponse;
 import ar.edu.utn.frba.ddsi.logistica.dto.camion.ChoferInfo;
-import ar.edu.utn.frba.ddsi.logistica.dto.camion.CrearCamionRequest;
-import ar.edu.utn.frba.ddsi.logistica.dto.camion.CrearCamionResponse;
-import ar.edu.utn.frba.ddsi.logistica.dto.camion.ObtenerCamionResponse;
-import ar.edu.utn.frba.ddsi.logistica.dto.camion.ObtenerTodosCamionesResponse;
+import ar.edu.utn.frba.ddsi.logistica.dto.camion.ChoferRequest;
 import ar.edu.utn.frba.ddsi.logistica.models.entities.Camion;
+import ar.edu.utn.frba.ddsi.logistica.models.entities.Chofer;
 import ar.edu.utn.frba.ddsi.logistica.models.repositories.CamionRepository;
 
 @Service
@@ -24,68 +22,79 @@ public class CamionService {
         this.camionRepository = camionRepository;
     }
 
-    public ObtenerTodosCamionesResponse obtenerTodos() {
-        List<ObtenerCamionResponse> camiones = camionRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .toList();
-        return new ObtenerTodosCamionesResponse(camiones);
+    public List<CamionResponse> obtenerTodos() {
+        return camionRepository.findAll().stream()
+            .map(this::toCamionResponse)
+            .collect(Collectors.toList());
     }
 
-    public ObtenerCamionResponse obtenerPorId(Long id) {
+    public CamionResponse obtenerPorId(Long id) {
         Camion camion = camionRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("No se encontro el camion con id: " + id));
-        return mapToResponse(camion);
+            .orElseThrow(() -> new IllegalArgumentException("No se encontro el camion"));
+
+        return this.toCamionResponse(camion);
     }
 
-    public CrearCamionResponse crear(CrearCamionRequest request) {
-        Camion camion = new Camion();
-        camion.setPatente(request.patente());
-        camion.setCapacidadVolumen(request.capacidadVolumen());
-        camion.setAltura(request.altura());
-        camion.setCapacidadCarga(request.capacidadCarga());
-        camion.setChofer(mapToChofer(request.chofer()));
-
-        Camion guardado = camionRepository.save(camion);
-        return new CrearCamionResponse(guardado.getId(), "Camión creado con éxito");
+    public CamionResponse crear(CamionRequest request) {
+        Camion camion = toCamion(request);
+        camion = camionRepository.save(camion);
+        return this.toCamionResponse(camion);
     }
 
-    public ActualizarCamionResponse actualizar(Long id, ActualizarCamionRequest request) {
+    public CamionResponse actualizar(Long id, CamionRequest request) {
         Camion existente = camionRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("No se encontro el camion con id: " + id));
+            .orElseThrow(() -> new IllegalArgumentException("No se encontro el camion"));
 
         existente.setPatente(request.patente());
         existente.setCapacidadVolumen(request.capacidadVolumen());
         existente.setAltura(request.altura());
         existente.setCapacidadCarga(request.capacidadCarga());
-        existente.setChofer(mapToChofer(request.chofer()));
+        existente.setChofer(toChofer(request.chofer()));
 
-        camionRepository.save(existente);
-        return new ActualizarCamionResponse("Camión actualizado con éxito");
+        existente = camionRepository.save(existente);
+        return this.toCamionResponse(existente);
     }
 
     public boolean eliminar(Long id) {
         return camionRepository.deleteById(id);
     }
 
-    private ObtenerCamionResponse mapToResponse(Camion camion) {
-        ChoferInfo choferInfo = camion.getChofer() != null
-                ? new ChoferInfo(camion.getChofer().getNombre(), camion.getChofer().getApellido())
-                : null;
-        return new ObtenerCamionResponse(
-                camion.getId(),
-                camion.getPatente(),
-                camion.getCapacidadVolumen(),
-                camion.getAltura(),
-                camion.getCapacidadCarga(),
-                choferInfo);
+    private Camion toCamion(CamionRequest request) {
+        Camion camion = new Camion();
+        camion.setPatente(request.patente());
+        camion.setCapacidadVolumen(request.capacidadVolumen());
+        camion.setAltura(request.altura());
+        camion.setCapacidadCarga(request.capacidadCarga());
+        camion.setChofer(toChofer(request.chofer()));
+        return camion;
     }
 
-    private Chofer mapToChofer(ChoferInfo info) {
-        if (info == null)
-            return null;
+    private CamionResponse toCamionResponse(Camion camion) {
+        ChoferInfo choferInfo = camion.getChofer() != null
+            ? toChoferInfo(camion.getChofer())
+            : null;
+
+        return new CamionResponse(
+            camion.getId(),
+            camion.getPatente(),
+            camion.getCapacidadVolumen(),
+            camion.getAltura(),
+            camion.getCapacidadCarga(),
+            choferInfo);
+    }
+
+    private Chofer toChofer(ChoferRequest request) {
+        if (request == null) return null;
         Chofer chofer = new Chofer();
-        chofer.setNombre(info.nombre());
-        chofer.setApellido(info.apellido());
+        chofer.setNombre(request.nombre());
+        chofer.setApellido(request.apellido());
         return chofer;
+    }
+
+    private ChoferInfo toChoferInfo(Chofer chofer) {
+        return new ChoferInfo(
+            chofer.getNombre(),
+            chofer.getApellido()
+        );
     }
 }
